added hamburger menu

--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -513,6 +513,10 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
+span.icon-bar {
+	background: #777;
+}
+
 .main-navigation {
 	clear: both;
 	display: block;
