--- a/wp-content/themes/texsite/sass/variables-site/_typography.scss
+++ b/wp-content/themes/texsite/sass/variables-site/_typography.scss
@@ -1,3 +1,5 @@
+$font__sans: 'Montserrat', "Lucida Grande",sans-serif;
+
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
