--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -756,6 +756,34 @@ span.icon-bar {
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
+.widget-title {
+	text-align: center;
+}
+
+.containerBox {
+	position: relative;
+	display: inline-block;
+}
+
+.text-box {
+	position: absolute;
+	/*height: 100%;*/
+	text-align: center;
+	width: 50%;
+}
+
+/*.text-box:before {*/
+/*content: '';*/
+/*display: inline-block;*/
+/*height: 100%;*/
+/*vertical-align: middle;*/
+/*}*/
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
