--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -1,29 +1,44 @@
 .widget-title {
   text-align: center;
+  @media screen and (max-width: 767px) {
+    font-size: 1.6em;
+  }
+  @media screen and (max-width: 992px) and (min-width: 768px) {
+      font-size: 1.9em;
+  }
 }
 
-.containerBox {
-  position: relative;
-  display: inline-block;
+.large-screen {
+  display: none;
+
+  @media screen and (min-width: 1500px) {
+    display: inline-block;
+  }
 }
+
 .text-box {
   position: absolute;
-  /*height: 100%;*/
+  //height: 100%;
   text-align: center;
-  width: 50%;
+  //width: 50%;
   opacity: 0.9;
-  border: solid blue 2px;
+
+  @media screen and (max-width: 767px) {
+    @include font-size(.5);
+    h3 {
+      font-size: 1.5em;
+    }
+  }
+
+  @media screen and (max-width: 992px) and (min-width: 768px) {
+    @include font-size(.7);
+    h3 {
+      font-size: 1.9em;
+    }
+  }
+
 }
-/*.text-box:before {*/
-/*content: '';*/
-/*display: inline-block;*/
-/*height: 100%;*/
-/*vertical-align: middle;*/
-/*}*/
-//h4 {
-//  display: inline-block;
-//  font-size: 20px; /*or whatever you want*/
-//}
+
 img {
   display: block;
   max-width: 100%;
