instagram mostly working but need format

--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -12,6 +12,11 @@
 @import "header/header";
 
 /*--------------------------------------------------------------
+## Frontpage widget
+--------------------------------------------------------------*/
+@import "frontpage/front-page";
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 @import "primary/posts-and-pages";
