--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -815,6 +815,18 @@ img {
 }
 
 /*--------------------------------------------------------------
+## Frontpage widget
+--------------------------------------------------------------*/
+.instagram-pic {
+	padding: 0;
+	margin: 0;
+}
+
+.instagram-bkg {
+	background: red;
+}
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
