--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -743,16 +743,6 @@ span.icon-bar {
 /*--------------------------------------------------------------
 ## Global layouts
 --------------------------------------------------------------*/
-.site-content {
-	padding: 1em;
-}
-
-@media screen and (min-width: 600px) {
-	.site-content {
-		padding: 2em;
-	}
-}
-
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -824,6 +814,7 @@ img {
 
 .instagram-bkg {
 	background: red;
+	padding: .3em 1em .3em 1em;
 }
 
 /*--------------------------------------------------------------
