--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -818,6 +818,19 @@ img {
 }
 
 /*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+.footer-nav {
+	width: 100%;
+	text-align: center;
+}
+
+.footer-nav > li {
+	float: none;
+	display: inline-block;
+}
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
