added padding to navegation

--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -549,6 +549,10 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
+.nav-pad {
+	padding-top: 1em;
+}
+
 .navbar {
 	margin: 0;
 }
