working on locations css

--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -30,3 +30,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## locations-menu page
+--------------------------------------------------------------*/
+@import "locations-menu/locations";
