--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -872,6 +872,18 @@ img {
 }
 
 /*--------------------------------------------------------------
+## locations-menu page
+--------------------------------------------------------------*/
+#map {
+	height: 60vh;
+}
+
+.search-location {
+	height: 60vh;
+	overflow: scroll;
+}
+
+/*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
 .widget {
