--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -880,7 +880,7 @@ img {
 
 .search-location {
 	height: 60vh;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 /*--------------------------------------------------------------
