added horizontal bar and removed some margins

--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -44,3 +44,13 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+//our story
+.our-title {
+  text-align: center;
+}
+
+.red-bar {
+  background: red;
+  height: 7vh;
+}
