--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -750,22 +750,6 @@ span.icon-bar {
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
-.widget-title {
-	text-align: center;
-}
-
-@media screen and (max-width: 767px) {
-	.widget-title {
-		font-size: 1.6em;
-	}
-}
-
-@media screen and (max-width: 992px) and (min-width: 768px) {
-	.widget-title {
-		font-size: 1.9em;
-	}
-}
-
 .large-screen {
 	display: none;
 }
@@ -808,13 +792,25 @@ img {
 	height: auto;
 }
 
+.red-bar {
+	background: red;
+	height: 7vh;
+}
+
 .our-title {
 	text-align: center;
 }
 
-.red-bar {
-	background: red;
-	height: 7vh;
+@media screen and (max-width: 767px) {
+	.our-title {
+		font-size: 1.6em;
+	}
+}
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+	.our-title {
+		font-size: 1.9em;
+	}
 }
 
 /*--------------------------------------------------------------
