working on our story text for different screen sizes

--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -1,33 +1,15 @@
 
-.large-screen {
-  display: none;
-
-  @media screen and (min-width: 1500px) {
-    display: inline-block;
-  }
+.center {
+  line-height: 200px;
+  height: 200px;
+  border: 3px solid green;
+  text-align: center;
 }
 
-.text-box {
-  position: absolute;
-  //height: 100%;
-  text-align: center;
-  //width: 50%;
-  opacity: 0.9;
-
-  @media screen and (max-width: 767px) {
-    @include font-size(.5);
-    h3 {
-      font-size: 1.5em;
-    }
-  }
-
-  @media screen and (max-width: 992px) and (min-width: 768px) {
-    @include font-size(.7);
-    h3 {
-      font-size: 1.9em;
-    }
-  }
-
+.center p {
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 img {
@@ -37,6 +19,51 @@ img {
 }
 
 //our story
+
+.large-screen, .medium-screen {
+  display: none;
+}
+
+.large-screen {
+  @media screen and (min-width: 1024px) {
+    display: inline-block;
+  }
+}
+
+.medium-screen {
+  @media screen and (min-width: 768px) {
+    display: inline-block;
+  }
+}
+
+.text-box {
+  position: absolute;
+  text-align: center;
+  opacity: 0.9;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+
+
+  @media screen and (max-width: 767px) {
+    @include font-size(.43);
+    h3 {
+      font-size: 1.4em;
+    }
+    left: 50%;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 1024px) and (min-width: 768px) {
+    @include font-size(.8);
+    h3 {
+      font-size: 1.9em;
+    }
+    left: 50%;
+  }
+
+}
+
 .red-bar {
   background: red;
   height: 7vh;
@@ -50,6 +77,10 @@ img {
   @media screen and (max-width: 992px) and (min-width: 768px) {
     font-size: 1.9em;
   }
+}
+
+.our-text {
+  position: relative;
 }
 
 //our story
