--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -924,8 +924,13 @@ img {
 
 .input-search {
 	border-radius: 2em;
-	text-align: center;
+	text-align: right;
 	width: 100%;
+}
+
+.input-search:focus {
+	outline: none;
+	box-shadow: 0 0 0 2pt red;
 }
 
 #search-area {
