location buttons layout

--- a/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
+++ b/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
@@ -38,7 +38,7 @@
   list-style: none;
   padding: 0;
 
-  .row {
+  .main-location {
     border-bottom: solid lightgray;
     margin: 1em 0;
     padding: 0 0 1em;
