--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -921,7 +921,7 @@ img {
 	padding: 0;
 }
 
-.searchresults .row {
+.searchresults .main-location {
 	border-bottom: solid lightgray;
 	margin: 1em 0;
 	padding: 0 0 1em;
