--- a/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
+++ b/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
@@ -46,7 +46,8 @@
   h4 {
     color: red;
     margin: 0 auto;
-    font-size: .9em;
+    font-size: 1.1em;
+    line-height: 1.7em;
   }
   p {
     margin: 0;
