--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -930,7 +930,8 @@ img {
 .searchresults h4 {
 	color: red;
 	margin: 0 auto;
-	font-size: .9em;
+	font-size: 1.1em;
+	line-height: 1.7em;
 }
 
 .searchresults p {
