switch location info with buttons

--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -962,7 +962,7 @@ img {
 
 .location-info {
 	padding-right: 1em;
-	text-align: right;
+	text-align: left;
 }
 
 /*--------------------------------------------------------------
