--- a/wp-content/themes/texsite/sass/variables-site/_colors.scss
+++ b/wp-content/themes/texsite/sass/variables-site/_colors.scss
@@ -5,6 +5,9 @@ $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
+// Texadelphia red background
+$color__background-bar: #c80000;
+
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
