--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -742,6 +742,18 @@ img {
 	height: auto;
 }
 
+.slider-caption {
+	position: absolute;
+	bottom: 20px;
+	left: 5%;
+	z-index: 10;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #fff;
+	text-align: center;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
 .large-screen, .medium-screen {
 	display: none;
 }
@@ -793,7 +805,7 @@ img {
 }
 
 .red-bar {
-	background: red;
+	background: #c80000;
 	height: 7vh;
 }
 
@@ -826,7 +838,7 @@ img {
 }
 
 .instagram-bkg {
-	background: red;
+	background: #c80000;
 	padding: .3em 1em .3em 1em;
 }
 
