--- a/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
+++ b/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
@@ -26,7 +26,7 @@
   width: 100%;
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 2pt red;
+    box-shadow: 0 0 0 2pt $color__background-bar;
   }
 }
 
@@ -44,7 +44,7 @@
     padding: 0 0 1em;
   }
   h4 {
-    color: red;
+    color: $color__background-bar;
     margin: 0 auto;
     font-size: 1.1em;
     line-height: 1.7em;
@@ -60,16 +60,21 @@
     color: white;
   }
   .btn-default {
-    color: red;
-    border: solid red 1px;
+    color: $color__background-bar;
+    border: solid $color__background-bar 1px;
   }
   .btn {
     margin-top: 7px;
   }
 }
 
-.location-buttons .btn-danger {
-  display: block;
+.location-buttons {
+  .btn-danger {
+    display: block;
+    background: $color__background-bar;
+  }
+
+  padding-right: 1em;
 }
 
 .location-info {
