--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -58,21 +58,26 @@ img {
   top: 50%;
   left: 25%;
   transform: translate(-50%, -50%);
+  padding-left: 6em;
+  padding-right: 6em;
 
+  h3 {
+    font-size: 1.8em;
+  }
 
   @media screen and (max-width: 767px) {
     @include font-size(.5);
     h3 {
-      font-size: 1.4em;
+      font-size: 1.3em;
     }
     left: 50%;
     width: 100%;
   }
 
-  @media screen and (max-width: 1400px) and (min-width: 768px) {
+  @media screen and (max-width: 1580px) and (min-width: 768px) {
     @include font-size(.8);
     h3 {
-      font-size: 1.9em;
+      font-size: 1.7em;
     }
     left: 50%;
     width: 100%;
