added print icon to menu modal

--- a/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
+++ b/wp-content/themes/texsite/sass/site/locations-menu/_locations.scss
@@ -82,6 +82,13 @@
   text-align: left;
 }
 
+//modals
+.location-modal {
+  i.fa.fa-print {
+    float: right;
+    padding-right: 2em;
+  }
+}
 //.section-full {
 //  height:100vh;
 //  min-height:100vh;
