--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -988,6 +988,11 @@ img {
 	text-align: left;
 }
 
+.location-modal i.fa.fa-print {
+	float: right;
+	padding-right: 2em;
+}
+
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
