--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -35,3 +35,8 @@
 ## locations-menu page
 --------------------------------------------------------------*/
 @import "locations-menu/locations";
+
+/*--------------------------------------------------------------
+## catering page
+--------------------------------------------------------------*/
+@import "catering/catering";
