--- a/wp-content/themes/texsite/sass/variables-site/_colors.scss
+++ b/wp-content/themes/texsite/sass/variables-site/_colors.scss
@@ -11,7 +11,7 @@ $color__background-bar: #c80000;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: #777;
+$color__link: #2d2d2d;
 
 $color__link-visited: #2d2d2d;
 $color__link-hover: #8d8d8d;
