added margin to main nav

--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -522,6 +522,12 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
+/* site nav */
+ul#primary-menu {
+	margin-top: .6em;
+}
+
+/* end site nav */
 .nav-pad {
 	padding-top: 1em;
 }
