added some css to catering and about and changed bootstrap to cdn

--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -40,3 +40,8 @@
 ## catering page
 --------------------------------------------------------------*/
 @import "catering/catering";
+
+/*--------------------------------------------------------------
+## about page
+--------------------------------------------------------------*/
+@import "about/about";
