--- a/wp-content/themes/texsite/sass/site/catering/_catering.scss
+++ b/wp-content/themes/texsite/sass/site/catering/_catering.scss
@@ -23,6 +23,10 @@
     color: #ffffff;
   }
 
+  h1 {
+    font-size: 2.5em;
+  }
+
   .large-screen, .medium-screen {
     display: none;
   }
@@ -58,6 +62,10 @@
 
 .order-text {
   position: relative;
+
+  a:visited {
+    color: #ffffff;
+  }
 
   .cater-img {
     min-height: 10%;
