preparing for optimization

--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -847,6 +847,7 @@ img {
 .our-text {
 	position: relative;
 	overflow: auto;
+	padding-left: 2vw;
 }
 
 /*--------------------------------------------------------------
